<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>nl.vpro.poms</groupId>
  <artifactId>poms-functional-tests-parent</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <modules>
    <module>poms-functional-tests-shared</module>
    <module>poms-functional-tests-selenium</module>
    <module>poms-functional-tests</module>
  </modules>

  <properties>
    <api.client.version>5.12-SNAPSHOT</api.client.version>
    <poms.shared.version>5.12-SNAPSHOT</poms.shared.version>
    <vpro.shared.version>2.9-SNAPSHOT</vpro.shared.version>
    <!--
    <selenium.version>3.141.59</selenium.version>
    -->
    <selenium.version>4.0.0-alpha-3</selenium.version>
  </properties>


  <build>
    <defaultGoal>test</defaultGoal>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>2.22.2</version>
        <executions>
          <execution>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>11</source>
          <target>11</target>
          <encoding>UTF-8</encoding>
          <compilerArgs>
            <arg>-parameters</arg>
          </compilerArgs>
        </configuration>
      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.22.2</version>
         <configuration>
           <forkCount>0</forkCount>
         </configuration>
       </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <version>3.0.0-M2</version>
        <executions>
          <execution>
            <id>enforce-maven</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <requireMavenVersion>
                  <version>3.0.5</version>
                </requireMavenVersion>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>


  <repositories>
    <repository>
      <id>sonatype_snapshot</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
  </repositories>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <type>pom</type>
        <version>5.5.2</version>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>nl.vpro.poms</groupId>
        <artifactId>poms-functional-tests-shared</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.rest-assured</groupId>
        <artifactId>rest-assured</artifactId>
        <version>4.1.2</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.assertj</groupId>
        <artifactId>assertj-core</artifactId>
        <version>3.13.2</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-log4j12</artifactId>
        <version>1.7.27</version>
      </dependency>
       <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>1.7.27</version>
      </dependency>
      <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>1.18.10</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>log4j</groupId>
        <artifactId>log4j</artifactId>
        <version>1.2.17</version>
      </dependency>
      <dependency>
        <groupId>org.springframework</groupId>
        <artifactId>spring-core</artifactId>
        <version>5.2.0.RELEASE</version>
      </dependency>
      <dependency>
        <groupId>nl.vpro.media</groupId>
        <artifactId>media-test</artifactId>
        <version>${poms.shared.version}</version>
      </dependency>
      <dependency>
        <groupId>nl.vpro.media</groupId>
        <artifactId>media-domain</artifactId>
        <version>${poms.shared.version}</version>
      </dependency>
      <dependency>
        <groupId>nl.vpro.poms</groupId>
        <artifactId>gtaa-domain</artifactId>
        <version>${poms.shared.version}</version>
      </dependency>
      <dependency>
        <groupId>nl.vpro.poms.api-clients</groupId>
        <artifactId>frontend-api-client</artifactId>
        <version>${api.client.version}</version>
      </dependency>
      <dependency>
        <groupId>nl.vpro.shared</groupId>
        <artifactId>vpro-shared-test</artifactId>
        <version>${vpro.shared.version}</version>
      </dependency>
      <dependency>
        <groupId>nl.vpro.shared</groupId>
        <artifactId>vpro-shared-client-resteasy</artifactId>
        <version>${vpro.shared.version}</version>
      </dependency>
      <dependency>
        <groupId>nl.vpro.shared</groupId>
        <artifactId>vpro-shared-util</artifactId>
        <version>${vpro.shared.version}</version>
      </dependency>
      <dependency>
        <groupId>nl.vpro.poms.api-clients</groupId>
        <artifactId>media-backend-api-client</artifactId>
        <version>${api.client.version}</version>
      </dependency>
      <dependency>
        <groupId>nl.vpro.poms.api-clients</groupId>
        <artifactId>client-extras</artifactId>
        <version>${api.client.version}</version>
      </dependency>
      <dependency>
        <groupId>nl.vpro.poms</groupId>
        <artifactId>poms-shared-domain</artifactId>
        <version>${poms.shared.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>3.9</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-text</artifactId>
        <version>1.8</version>
      </dependency>
      <dependency>
         <groupId>org.seleniumhq.selenium</groupId>
        <artifactId>selenium-java</artifactId>
        <version>${selenium.version}</version>
      </dependency>
      <dependency>
        <groupId>com.paulhammant</groupId>
        <artifactId>ngwebdriver</artifactId>
        <version>1.1.4</version>
      </dependency>
      <dependency>
        <groupId>io.github.bonigarcia</groupId>
        <artifactId>webdrivermanager</artifactId>
        <version>3.7.1</version>
      </dependency>
<!--
      <dependency>
        <groupId>com.google.code.gson</groupId>
        <artifactId>gson</artifactId>
        <version>2.8.5</version>
      </dependency>
-->
      <dependency>
        <groupId>org.apache.httpcomponents</groupId>
        <artifactId>httpclient</artifactId>
        <version>4.5.10</version>
      </dependency>
      <dependency>
        <groupId>org.rauschig</groupId>
        <artifactId>jarchivelib</artifactId>
        <version>1.0.0</version>
      </dependency>
      <dependency>
        <groupId>javax.el</groupId>
        <artifactId>el-api</artifactId>
        <version>3.0.0</version>
      </dependency>
      <dependency>
        <groupId>org.glassfish</groupId>
        <artifactId>javax.el</artifactId>
        <version>3.0.1-b11</version>
      </dependency>
      <dependency>
         <groupId>javax.servlet</groupId>
        <artifactId>javax.servlet-api</artifactId>
        <version>3.1.0</version>
      </dependency>
      <dependency>
        <groupId>javax.ws.rs</groupId>
        <artifactId>javax.ws.rs-api</artifactId>
        <version>2.1.1</version>
      </dependency>
    </dependencies>

  </dependencyManagement>

</project>
